Cards with layout and colors done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,37 @@
-<div class="container">
+<div class="container gy-1">
   <div class="row">
-    <div class="card col">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">
+            Tesla (TSLA)
+            <i class="bi bi-arrow-up-right-circle text-success"></i>
+          </h5>
+          <p class="card-text">
+            Price <span class="badge bg-success">$2061.74 (+ 4%)</span>
+            <br />
+            Today's high <span class="badge bg-dark">$2073.45</span><br />
+            Today's low <span class="badge bg-dark">$2060.25</span>
+          </p>
+          <a href="#" class="btn btn-primary">More info</a>
+        </div>
       </div>
     </div>
-    <div class="card col">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">
+            Microsoft (MSFT)
+            <i class="bi bi-arrow-down-right-circle text-danger"></i>
+          </h5>
+          <p class="card-text">
+            Price <span class="badge bg-danger">$188 (- 6%)</span>
+            <br />
+            Today's high <span class="badge bg-dark">$200</span><br />
+            Today's low <span class="badge bg-dark">$169</span>
+          </p>
+          <a href="#" class="btn btn-primary">More info</a>
+        </div>
       </div>
     </div>
   </div>
